configs/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                upgrade_configs:
                  - upgrade_type: websocket
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: lab_service
                      domains:
                        - "lab.devaraj.me"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: lab_service_cluster
                    - name: wildcard_subdomains
                      domains:
                        - "*.lab.devaraj.me"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: dynamic_forward_proxy_cluster
                            host_rewrite_header: ":authority"
                http_filters:
                  - name: envoy.filters.http.dynamic_forward_proxy
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                      dns_cache_config:
                        name: dynamic_dns_cache
                        dns_lookup_family: V4_ONLY
                        dns_refresh_rate: 1s
                        dns_min_refresh_rate: 1s
                        host_ttl: 1s
                        max_hosts: 1024
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: lab_service_cluster
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: lab_service_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3000
    - name: dynamic_forward_proxy_cluster
      connect_timeout: 0.25s
      cluster_type:
        name: envoy.clusters.dynamic_forward_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
          dns_cache_config:
            name: dynamic_dns_cache
            dns_lookup_family: V4_ONLY
            dns_refresh_rate: 1s
            dns_min_refresh_rate: 1s
            host_ttl: 1s
            max_hosts: 1024
      lb_policy: CLUSTER_PROVIDED
